<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bckgrnd"
    android:orientation="vertical"
    android:paddingTop="40dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/EditText_Name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="15dp" />

        <Button
            android:id="@+id/addPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/EditText_Name"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/addphoto" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/Spinner_Category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/categories" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/objecttype"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/Spinner_ObjectType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
		android:entries="@array/objecttypes" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/eventstatus"
        android:textSize="18dp" />

    <Spinner
        android:id="@+id/Spinner_EventStatus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/eventstatus"/>
    
    <Button
        	android:id="@+id/locationButton"
       	 	android:layout_width="143dp"
        	android:layout_height="wrap_content"
        	android:text="@string/location" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bckgrnd"
    android:orientation="horizontal"
    android:paddingTop="40dp" >

        <ImageButton
        	android:id="@+id/backButton"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/back" />
        
    	<ImageButton
       		android:id="@+id/createButton"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/create" />

    	</LinearLayout>

</LinearLayout>