<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bckgrnd"
    android:paddingTop="40dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageButton 
        android:id="@+id/mapsButton"
        android:src="@drawable/mapsselector"
    	android:layout_width="262dp"
    	android:layout_height="76dp"
    	android:layout_marginTop="30dp" 
    	android:layout_marginBottom="20dp"   	
    	android:layout_gravity="center_horizontal"    	
    	android:text="@string/maps" />
    
    <ImageButton
        android:id="@+id/addObjectButton"
         android:src="@drawable/objectsselector"
        android:layout_width="262dp"
        android:layout_height="76dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/objects" />
    
    <ImageButton
        android:id="@+id/managementButton"
        android:background="@drawable/managementselector"
        android:layout_width="262dp"
        android:layout_height="76dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/management" />

    <ImageButton
        android:id="@+id/quitButton"
        android:src="@drawable/quitselector"
        android:layout_width="262dp"
        android:layout_height="76dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/quit" />
  
</LinearLayout>