<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bckgrnd"
    android:paddingLeft="15dp"
    android:paddingTop="40dp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/EditText_Username"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingLeft="15dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/EditText_Email"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingLeft="15dp" />

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18dp" />    	

    <EditText
        android:id="@+id/EditText_Password"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingLeft="15dp" />
 
   <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordagain"
        android:textSize="18dp" />    	

    <EditText
        android:id="@+id/EditText_Password2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:paddingLeft="15dp" />

    <TextView
        android:id="@+id/error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp" />

	<RelativeLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal"
	    android:paddingLeft="15dp"
	    android:paddingTop="40dp" > 
        
	    <ImageButton
	        android:id="@+id/backButton"
	        android:background="@drawable/backbtn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:text="@string/back" />

	    <ImageButton
	        android:id="@+id/signUpButton"
	        android:layout_width="150dp"
	        android:layout_height="76dp"
	        android:layout_alignParentRight="true"
	        android:layout_alignTop="@+id/backButton"
	        android:layout_marginRight="20dp"
	        android:background="@drawable/signupsmallselector"
	        android:text="@string/signup" />

	</RelativeLayout>

</LinearLayout>

